--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,5 +10,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set up PowerShell
       uses: actions/setup-powershell@v2
-    - name: Run Tests
-      run: pwsh -File tests/Test-SplitVersion.ps1
+    - name: Install Pester
+      run: Install-Module -Name Pester -Force -SkipPublisherCheck
+    - name: Run Pester Tests
+      run: |
+        Invoke-Pester -Script tests/Test-SplitVersion.Tests.ps1 -Output Detailed
