Update CI workflow to run Pester tests on Ubuntu and enhance test execution steps

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,15 +3,16 @@ name: CI
 on: [push, pull_request]
 
 jobs:
-  build:
-    runs-on: windows-latest
-
+  pester-test:
+    name: Pester test
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up PowerShell
-      uses: actions/setup-powershell@v2
-    - name: Install Pester
-      run: Install-Module -Name Pester -Force -SkipPublisherCheck
-    - name: Run Pester Tests
-      run: |
-        Invoke-Pester -Script tests/Test-SplitVersion.Tests.ps1 -Output Detailed
+      - name: Check out repository code
+        uses: actions/checkout@v4
+      - name: Perform a Pester test from the command-line
+        shell: pwsh
+        run: Test-Path resultsfile.log | Should -Be $true
+      - name: Perform a Pester test from the Tests.ps1 file
+        shell: pwsh
+        run: |
+          Invoke-Pester -Script tests/Test-SplitVersion.Tests.ps1 -Output Detailed
